# aln-research-docs

./: Cargo.toml  LICENSE  README.md
docs/architecture/: overview.md
docs/governance/: policy.md
docs/security/: threat-model.md
papers/: template.md
src/: lib.rs
src/builder/: mod.rs
src/hex_stamp/: mod.rs
src/validator/: mod.rs
tests/: integration_tests.rs
